--- a/frontend/haggin/package.json
+++ b/frontend/haggin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.29.2",
+    "potrace": "^2.1.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
